RESOLVED FIXED50797
canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6.html fails
https://bugs.webkit.org/show_bug.cgi?id=50797
Summary canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6.html fails
Mihai Parparita
Reported 2010-12-09 18:40:22 PST
This tests checks that we don't allow the invalid color value "rgba(255, 0, 0, 1.)" to be used as fillStyle. We actually allow this, even though 1. is not a valid CSS <alphavalue> (which is a <number>, which is defined as "A <number> can either be an <integer>, or it can be zero or more digits followed by a dot (.) followed by one or more digits." at http://www.w3.org/TR/css3-values/#numbers). Since this would involve making our CSS color parser stricter, I'm not sure that this is worth fixing.
Attachments
Patch (6.12 KB, patch)
2012-08-09 09:00 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-08-09 08:56:00 PDT
*** Bug 93493 has been marked as a duplicate of this bug. ***
Sudarsana Nagineni (babu)
Comment 2 2012-08-09 09:00:29 PDT
Andreas Kling
Comment 3 2012-08-14 07:02:54 PDT
(In reply to comment #0) > Since this would involve making our CSS color parser stricter, I'm not sure that this is worth fixing. Indeed, I wonder the same thing. What are other browsers doing?
Sudarsana Nagineni (babu)
Comment 4 2012-08-14 09:11:05 PDT
(In reply to comment #3) > Indeed, I wonder the same thing. What are other browsers doing? Looks like other browsers (FireFox and Opera) are treating 1. is an invalid CSS alpha value, so the test is passing. Full parser doing the same in our case also. The issue is only with the fast-path color parser.
Sudarsana Nagineni (babu)
Comment 5 2012-08-21 04:02:13 PDT
Kling, could you please have a look at this bug again?
Andreas Kling
Comment 6 2012-08-21 08:32:58 PDT
Comment on attachment 157462 [details] Patch Okay.
WebKit Review Bot
Comment 7 2012-08-21 15:01:49 PDT
Comment on attachment 157462 [details] Patch Clearing flags on attachment: 157462 Committed r126192: <http://trac.webkit.org/changeset/126192>
WebKit Review Bot
Comment 8 2012-08-21 15:01:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.