canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6.html fails https://bugs.webkit.org/show_bug.cgi?id=50797

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-08-21
Reviewed by Andreas Kling.

Source/WebCore:

Add a check in fast-path parseAlphaValue() to return early
if the CSS <alphavalue> ended with an invalid digit.

Test: canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6.html

* css/CSSParser.cpp:
(WebCore::parseAlphaValue):

LayoutTests:

Unskipped tests that are now passing after this fix and removed
wrong expectations.

* platform/chromium/TestExpectations:
* platform/chromium/canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6-expected.txt: Removed.
* platform/efl/Skipped:
* platform/gtk/TestExpectations:
* platform/mac/canvas/philip/tests/2d.fillStyle.parse.invalid.rgba-6-expected.txt: Removed.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/112428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126192 268f45cc-cd09-0410-ab3c-d52691b4dbfc